<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">NCI</string>
    <string name="internet_not_available">Internet is not available</string>
    <string name="enter_mobile">Enter Phone Number</string>
    <string name="enter_valid_mobile">Enter valid mobile number</string>
    <string name="tap_action">Tap icon to perform action</string>
    <string name="send">Send Money</string>
    <string name="req_money">Request Money</string>
    <string name="receive_money">Receive Money</string>
    <string name="balance">Balance</string>
    <string name="add_money">Add Money</string>
    <string name="title_crossfade">Simple Crossfade</string>
    <string name="title_card_flip">Card Flip</string>
    <string name="title_screen_slide">Screen Slide</string>
    <string name="title_zoom">Zoom</string>
    <string name="title_layout_changes">Layout Changes</string>
    <string name="title_template_step">Step <xliff:g id="step_number">%1$d</xliff:g>: Lorem
        Ipsum</string>

    <!-- Actions -->
    <string name="action_toggle">Toggle indicator</string>
    <string name="action_add_item">Add item</string>
    <string name="action_remove_item">Remove item</string>
    <string name="action_previous">Previous</string>
    <string name="action_next">Next</string>
    <string name="action_finish">Finish</string>
    <string name="action_info">Photo info</string>
    <string name="action_photo">View photo</string>

    <!-- Messages -->
    <string name="message_empty_layout_changes">Add an item above to get started.</string>
    <string name="message_zoom_touch_expand">Touch a photo to expand it.</string>

    <!-- Accessibility-only descriptions -->
    <string name="description_image_1">Image 1</string>
    <string name="description_image_2">Image 2</string>
    <string name="description_zoom_touch_close">Expanded image (touch to close)</string>

    <!-- Other strings -->

    <string name="register_mobile">Registeration</string>
    <string name="sign_in">Sign In</string>
    <string name="enter_pin">Enter Pin</string>
    <string name="submit_OTP">submit</string>
    <string name="enter_otp"> Enter OTP</string>
    <string name="please_enter_otp">Please enter the OTP</string>
    <string name="confirm_pin">Confirm PIN</string>
    <string name="create_new_pin">Create your 4 digit New Pin</string>
    <string name="enter_new_pin">Enter your new Pin</string>
    <string name="create_pin">submit</string>
    <string name="submit">Submit</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="remarks_optional">Remarks(Optional)</string>
    <string name="request_money">Request Money</string>
    <string name="enter_valid_pin">Enter a valid pin</string>
    <string name="current_balance">Your Current Balance is</string>
    <string name="send_money">Send Money</string>
    <string name="add">Add</string>
    <string name="forgot_pin">Forgot Pin?</string>
    <string name="request_complete">REQUEST_COMPLETE</string>
    <string name="otp_successfully_verified">OTP_SUCCESSFULLY_VERIFIED</string>
    <string name="pin_successfully_verified">PIN_SUCCESSFULLY_VERIFIED</string>
    <string name="security_answer">Your answer</string>

    <string name="pin_change">Set your new  PIN here</string>
    <string name="old_pin">Enter your old PIN</string>
    <string name="new_pin">Enter your new PIN</string>
    <string name="Change_pinnew">Set new PIN</string>
    <string name="please_enter_amount">Please enter amount</string>
    <string name="header">HEADER</string>
    <string name="mobile_number">mobileNumber</string>
    <string name="data">DATA</string>
    <string name="enter_old_pin">Please enter your 4 digit old pin</string>
    <string name="different_old_and_new_pins">Old pin and new pin should be different</string>
    <string name="pins_dont_match">Pin did not match</string>
    <string name="security_ques">Please set your security answer</string>
    <string name="enter_a_four_digit_pin">Enter 4 digit PIN</string>
    <string name="changing_pin">Change PIN</string>
    <string name="setting">Setting</string>
    <string name="profile">Profile</string>
    <string name="trans_history">Transaction History</string>
    <string name="answer_security">Your answer</string>
    <string name="submit_security_answer">submit</string>


    <string-array name="home_date_filter">
        <item>Today</item>
        <item>Yesterday</item>
        <item>Last 7 days</item>
        <item>This month</item>
        <item>Till date</item>

    </string-array>

    <array name="small_titles">
        <item>1st</item>
        <item>2nd</item>
        <item>3rd</item>
        <item>4th</item>
    </array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="forgot_set_pin">Set a new 4-digit PIN here</string>
    <string name="enter_phonenumber">Enter your Phone Number</string>
    <string name="enter_ur_pin">Enter your 4-digit PIN</string>
    <string name="select_sec_qn">---select your security question---</string>
    <string name="enter_sec_ans">Please enter the security answer</string>
    <string name="sec_qn_id">ControlDtlId</string>
    <string name="sec_ans_key">SecurityAns</string>
    <string name="register">Register</string>
    <string name="log_in">Log In</string>
    <string name="utility">Utility : </string>
    <string name="trans_id">Transaction Id :</string>
    <string name="ref_no">Ref no :</string>
    <string name="Order_id">ORDER_ID</string>
    <string name="sms_permission">Please give SMS permission to continue</string>
    <string name="title_activity_main_navigation">MainNavigationActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_change_pin">Change Pin</string>
    <string name="personal_details">Personal Details</string>
    <string name="MobileNumber">Mobile Number</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="edit_details">Edit Profile</string>
    <string name="email_address">Email Address</string>
    <string name="save">Save</string>
    <string name="title_my_account">My Account</string>
    <string name="my_acc_current_balance">Current Balance</string>
    <string name="MyAccChangePin">Change Pin</string>
    <string name="title_feedback">Feedback</string>
    <string name="title_about_us">About Us</string>
    <string name="change_pin">Change Pin</string>
    <string name="TVpowered_by">Powered By</string>
    <string name="ls_tv_offers">Offers</string>
    <string name="ls_tv_contact">Contact</string>
    <string name="ls_tv_app_tour">App Tour</string>
    <string name="ls_tv_faqs">FAQs</string>
    <string name="ls_tv_about_us">About Us</string>
    <string name="title_faqs">FAQs</string>
    <string name="enter_feedback">Give Your Valuable Feedback</string>
    <string name="empty_feedback_error">Please enter your Feedback</string>
    <string name="Faq">Frequently Asked Questions</string>
    <string name="toast_pin_changed">Pin successfully changed!</string>
    <string name="faq_error">unable to load FAQs</string>
    <string name="enter_answer">Enter Answer</string>
    <string name="about_us_text">
        <![CDATA[NATIONAL CANCER INSTITUTE, Nagpur is proposed as a state of the art 500 bed \'Comprehensive Cancer Care Centre\' spread over 23.5 acre campus. The campus includes main Hospital Building with total built up area of 700,000 Sft. appx. and allied facilities like Yatri Niwas, Nurses Hostel, Staff Housing, with a total built up area of 200,000 sq ft.\n \nQuaternary Care, Palliative Care and Sustainable Charity are three key phrases that sum up the mission of the Institute. \n \nThe process of planning commenced in the last quarter of 2013 and the execution commenced in March 2015 \n \nPlanning based on the values of Functionality, Sustainbility, Energy Efficiency, Safety & Aesthetics in compliance with both NABH and JCI.]]>
    </string>
    <string name="title_contact_us">Contact Us</string>
    <string name="contactus_phone_tv">Phone</string>
    <string name="jamtha">JAMTHA</string>
    <string name="dharampeth">DHARAMPETH</string>
    <string name="jamtha_phone_number"><u>18002330033</u></string>
    <string name="dharampeth_phone_number"><u>07122545562</u></string>
    <string name="dharam_fax">Fax:</string>
    <string name="phone_title_tv">Phone:</string>
    <string name="dharam_fax_no"><u>07122545562</u></string>
    <string name="contactus_emailTV">Email</string>
    <string name="info_email"><u>info@ncinagpur.in</u></string>
    <string name="hr_email"><u>hr@ncinagpur.in</u></string>
    <string name="nci_title">NATIONAL CANCER INSTITUTE</string>
    <string name="jamtha_addtess">Khasra No. 25, Outer Hingna Ring Road, Mouza Jamtha, Nagpur - 441108 (M.S.)</string>
    <string name="dharampeth_address">293, Manorama Chambers WHC Road, Dharampeth, Nagpur - 440010</string>
    <string name="nci_address_title">Address</string>
    <string name="enter_valid_OTP">Enter a 6 digit OTP</string>
    <string name="qn_not_selected_error">Please select a Security Question</string>
    <string name="empty_seq_ans_error">Enter the Answer</string>
    <string name="signup_success_msg">Sign up Successful! Use the Pin created to login to your Account</string>
    <string name="otp_expired_message">OTP expired</string>
    <string name="resend_otp_btn">Resend OTP</string>
    <string name="otp_send_success_msg">OTP successfully sent to your registered Number</string>

</resources>
