<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Request">

    <android.support.v7.widget.Toolbar
        android:id="@+id/reqmoney_toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:title="@string/request_money"
        app:titleTextColor="@android:color/white"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"

        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <Button
        android:id="@+id/reqmoney_btnsubmit"
        style="@style/buttonsolid"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:text="@string/submit"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1" />


    <android.support.design.widget.TextInputLayout
        android:id="@+id/reqmoney_inputmobile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@+id/guideline2"
        app:layout_constraintRight_toLeftOf="@+id/guideline"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginTop="80dp"
        app:layout_constraintTop_toBottomOf="@+id/reqmoney_toolbar">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/reqmoney_edtmobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_mobile"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:paddingRight="50dp" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline2"
        app:layout_constraintRight_toLeftOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/reqmoney_inputmobile"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/reqmoney_edtamount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_inr"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/enter_amount"
            android:imeOptions="actionNext"
            android:inputType="numberDecimal" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline2"
        app:layout_constraintRight_toLeftOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/reqmoney_edtremakrs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="top|left"
            android:hint="@string/remarks_optional"
            android:inputType="text"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="30dp"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="354dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="30dp"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="30dp" />


</android.support.constraint.ConstraintLayout>
